encoding/jsonschema/testdata/generate/uniqueitems.txtar
-- test.cue --
package test

import "list"

uniqueList?: list.UniqueItems()

uniqueListNoCall?: list.UniqueItems

// TODO this doesn't work - the code currently just looks
// for call expressions but this isn't a call expression.
uniqueBools?: list.UniqueItems() & [bool, bool]

-- datatest/tests.cue --
package datatest

ok: data: {
	uniqueList: [1, 2, 3]
	uniqueListNoCall: [1, 2]
	uniqueBools: [true, false]
}

badUnique: {
	data: uniqueList: [1, 1, 2]
	error: true
}

badUniqueNoCall: {
	data: uniqueListNoCall: [1, 1, 2]
	// TODO this should be an error.
	//error: true
}

badUniqueBools: {
	data: uniqueBools: [true, true]
	error: true
}
-- out/generate-v3/schema --
{
	$schema: "https://json-schema.org/draft/2020-12/schema"
	$defs: {
		UniqueItems: {
			type: "array"
		}
	}
	type: "object"
	properties: {
		uniqueBools: {
			type: "array"
			prefixItems: [{
				type: "boolean"
			}, {
				type: "boolean"
			}]
			maxItems:    2
			minItems:    2
			uniqueItems: true
		}
		uniqueList: {
			type:        "array"
			uniqueItems: true
		}
		uniqueListNoCall: {
			$ref: "#/$defs/UniqueItems"
		}
	}
}
-- out/generate-v3/ok --
-- out/generate-v3/badUnique --
badUnique.data.uniqueList: invalid value [1,1,2] (does not satisfy list.UniqueItems): equal value (1) at position 0 and 1:
    1:289
    ./datatest/tests.cue:10:20
-- out/generate-v3/badUniqueBools --
badUniqueBools.data.uniqueBools: invalid value [true,true] (does not satisfy list.UniqueItems): equal value (true) at position 0 and 1:
    1:240
    ./datatest/tests.cue:21:21
    1:214
-- out/generate-v3/badUniqueNoCall --
